优化了登录界面

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -269,3 +269,12 @@ code {
     animation: octocat-wave 560ms ease-in-out
   }
 }
+/* 让icon图标根据当前的 font-size 动态调整尺寸*/
+.fa-icon {
+  width: auto;
+  height: 1em; /* 或任意其它字体大小相对值 */
+
+  /* 要在 Safari 中正常工作，需要再引入如下两行代码 */
+  max-width: 100%;
+  max-height: 100%;
+}
