--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -4,8 +4,8 @@
   min-height: 100%;
 }
 
-.sidebar-container .svg-icon {
-  margin-right: 16px;
+.sidebar-container .fa-icon {
+  margin-right: 5px;
 }
 
 .hideSidebar .el-submenu>.el-submenu__title,
@@ -45,7 +45,7 @@
 .hideSidebar .el-menu-item .el-submenu__icon-arrow,
 .hideSidebar .el-submenu .el-submenu__title .el-submenu__icon-arrow {
   display: none;
-  right: 5px;
+  right: 0px;
 }
 
 .hideSidebar .submenu-title-noDropdown {
